fix(asyncapi): refactor asyncapi parsing and traits processing